[package]
name = "kvbench"
version = "0.1.0"
edition = "2021"

[profile.release-nativecpu]
inherits = "release"
debug = true
# still unstable: https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#profile-rustflags-option
# this is defined for make run_native
#rustflags = ["-C", "target-cpu=native"]

[dependencies]
argh = "0.1.9"
go-parse-duration = "0.1.1"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
