[package]
name = "kvbench"
version = "0.1.0"
edition = "2021"

[profile.release-nativecpu]
inherits = "release"
debug = true
# still unstable: https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#profile-rustflags-option
# this is defined for make run_native
#rustflags = ["-C", "target-cpu=native"]

[dependencies]
argh = "0"
go-parse-duration = "0"
rand = "0"
rand_xoshiro = "0"
redis = "0"
strum = { version = "0", features = ["derive"] }
